idea code cleanup